adding script changes, update on documentation and adding integration test